# blidino

./: .gitmodules  .travis.yml  CMakeLists.txt  LICENSE  README.md  run_unit_tests.sh
Legacy Projects/nRF8001-BLE-Proto/: RBL_services.h  nRF8001-BLE-Proto.ino
Legacy Projects/nRF8001-BLE-Proto/RBL_nRF8001/: RBL_nRF8001.h  RBL_services_OLD.h
Legacy Projects/nRF8001-BLE-Proto/RBL_nRF8001/examples/BLEFirmataSketch/: BLEFirmataSketch.ino
Legacy Projects/nRF8001-BLE-Proto/RBL_nRF8001/examples/BLE_RGB/: BLE_RGB.ino
Legacy Projects/nRF8001-BLE-Proto/RBL_nRF8001/examples/HelloWorld/: HelloWorld.ino
Legacy Projects/nRF8001-BLE-Proto/RBL_nRF8001/examples/SimpleChat/: SimpleChat.ino
debug-utils/MIDI LE for OSX/: README.md
debug-utils/MIDI LE for OSX/MIDI LE for OSX/: AppDelegate.h  AppDelegate.m  Info.plist  NSData+hexConv.h  NSData+hexConv.m  main.m
debug-utils/MIDI LE for OSX/MIDI LE for OSX.app/Contents/: Info.plist
debug-utils/MIDI LE for OSX/MIDI LE for OSX.app/Contents/MacOS/: MIDI LE for OSX
debug-utils/MIDI LE for OSX/MIDI LE for OSX.app/Contents/Resources/Base.lproj/: MainMenu.nib
debug-utils/MIDI LE for OSX/MIDI LE for OSX.app/Contents/_CodeSignature/: CodeResources
debug-utils/MIDI LE for OSX/MIDI LE for OSX.xcodeproj/: project.pbxproj
debug-utils/MIDI LE for OSX/MIDI LE for OSX.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
debug-utils/MIDI LE for OSX/MIDI LE for OSX.xcodeproj/project.xcworkspace/xcuserdata/sierenmusic.xcuserdatad/: UserInterfaceState.xcuserstate
debug-utils/MIDI LE for OSX/MIDI LE for OSX.xcodeproj/xcuserdata/sierenmusic.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
debug-utils/MIDI LE for OSX/MIDI LE for OSX.xcodeproj/xcuserdata/sierenmusic.xcuserdatad/xcschemes/: MIDI LE for OSX.xcscheme  xcschememanagement.plist
debug-utils/MIDI LE for OSX/MIDI LE for OSX/Base.lproj/: MainMenu.xib
debug-utils/MIDI LE for OSX/MIDI LE for OSX/PGMidi/: PGMidi.h  PGMidi.mm
debug-utils/MIDI LE for OSX/MIDI LE for OSXTests/: Info.plist  MIDI_LE_for_OSXTests.m
nRF51822-BLEMIDI/: BLEParser.cpp  BLEParser.h  CMakeLists.txt  README.md  nRF51822-BLEMIDI.ino  projectconfig.h
nRF51822-BLEMIDI/Tests/BLEMidiTest/BLEMidiTest/: main.c
nRF51822-BLEMIDI/Tests/BLEMidiTest/BLEMidiTest.xcodeproj/: project.pbxproj
nRF51822-BLEMIDI/Tests/BLEMidiTest/BLEMidiTest.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
nRF51822-BLEMIDI/Tests/BLEMidiTest/BLEMidiTest.xcodeproj/project.xcworkspace/xcshareddata/: BLEMidiTest.xccheckout
nRF51822-BLEMIDI/Tests/BLEMidiTest/BLEMidiTest.xcodeproj/project.xcworkspace/xcuserdata/sierenmusic.xcuserdatad/: UserInterfaceState.xcuserstate
nRF51822-BLEMIDI/Tests/BLEMidiTest/BLEMidiTest.xcodeproj/xcuserdata/sierenmusic.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
nRF51822-BLEMIDI/Tests/BLEMidiTest/BLEMidiTest.xcodeproj/xcuserdata/sierenmusic.xcuserdatad/xcschemes/: BLEMidiTest.xcscheme  xcschememanagement.plist
nRF51822-BLEMIDI/unit_tests/: tst_BLEParser.cpp
nRF8001-BLE-Proto/: README.md
nRF8001-BLE-Proto/RBL_nRF8001/: RBL_nRF8001.cpp  RBL_services.h
nRF8001-BLE-Proto/RBL_nRF8001/examples/BLEControllerSketch/: BLEControllerSketch.ino
nRF8001-BLE-Proto/RBL_nRF8001/examples/BLEFirmataSketch/: BLEFirmata.h  Boards.h
nRF8001-BLE-Proto/RBL_nRF8001/examples/SimpleControls/: SimpleControls.ino
unit_tests/: tst_BLEParser.cpp
